[gd_scene load_steps=7 format=3 uid="uid://cc4wr02nbrvlf"]

[ext_resource type="Script" uid="uid://cwuq0twma50n" path="res://World/Basement/interactables/target_dummy/target_dummy.gd" id="1_p7pri"]
[ext_resource type="Material" uid="uid://blrj00jgqkf6u" path="res://Assets/Materials/Hit_Flash_Mat.tres" id="2_nh5h0"]
[ext_resource type="Script" uid="uid://dix28m30vdhe4" path="res://Components/health_component.gd" id="2_pq0j7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nh5h0"]
height = 0.088378906

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g3bjf"]
albedo_color = Color(1, 0.45462656, 0.4424383, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ggy7i"]

[node name="TargetDummy" type="StaticBody3D" groups=["damageable"]]
script = ExtResource("1_p7pri")
hit_flash_mat = ExtResource("2_nh5h0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0.8, 0.004638672)
shape = SubResource("CylinderShape3D_nh5h0")

[node name="HealthComponent" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
script = ExtResource("2_pq0j7")

[node name="Target" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Target"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
height = 0.05
material = SubResource("StandardMaterial3D_g3bjf")

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="Target"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0.006257355)
radius = 0.4
height = 0.05
material = SubResource("StandardMaterial3D_ggy7i")

[node name="CSGCylinder3D4" type="CSGCylinder3D" parent="Target"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0.015071914)
radius = 0.3
height = 0.05
material = SubResource("StandardMaterial3D_g3bjf")

[node name="CSGCylinder3D5" type="CSGCylinder3D" parent="Target"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0.021218836)
radius = 0.2
height = 0.05
material = SubResource("StandardMaterial3D_ggy7i")

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="Target"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0.03348291)
radius = 0.05
height = 0.05
material = SubResource("StandardMaterial3D_g3bjf")

[node name="Stand" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="Stand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.007080078, -0.3110646, -0.08741203)
size = Vector3(0.16357422, 1, 0.14343262)

[node name="CSGBox3D2" type="CSGBox3D" parent="Stand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.006134033, -0.73806655, -0.08741203)
size = Vector3(0.7498169, 0.1459961, 0.14343262)

[node name="CSGBox3D3" type="CSGBox3D" parent="Stand"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -0.006134033, -0.73806655, -0.08741203)
size = Vector3(0.7498169, 0.1459961, 0.14343262)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4292511, 0)
text = "TEST"

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
